Build python extension in debian package

--- a/debian/rules
+++ b/debian/rules
@@ -4,6 +4,9 @@
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/makefile.mk
 
+DEB_PYTHON_SYSTEM = pysupport
+include /usr/share/cdbs/1/class/python-distutils.mk
+
 DEB_MAKE_CLEAN_TARGET	= clean
 DEB_MAKE_BUILD_TARGET	= all
 DEB_MAKE_INSTALL_TARGET	= install DESTDIR=$(CURDIR)/debian/libsmartpen
