--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,6 @@ Standards-Version: 3.7.2
 
 Package: libsmartpen
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libopenobex1 (>= 1.5-2srw0), libglib2.0-0, libusb-1.0-0
+Depends: ${shlibs:Depends}, ${misc:Depends}, libopenobex1 (>= 1.5-2), libglib2.0-0, libusb-1.0-0
 Description: Library for communicating with the Livescribe Pulse Smartpen
  Routines for connecting to and downloading data from the pulse smartpen
